feat: cleanup, predicted classification comes with explanatio nby default
